Move to open api 2.0 for google endpoints Support selecting a date
